# OpenEMS

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  README.md  docker-compose.e2e.yml  docker-compose.yml
config/: ems.json
config/modbus/: Mbslave1.mbs
config/tables/: alarm_rule.csv  device.csv  ems_config.csv  iec104_mapping.csv  modbus_mapping.csv  setting.csv  site.csv  teleadjust.csv  telecontrol.csv  teleindication.csv  telemetry.csv  topology_node.csv
docker/: start_openems.sh
docker/e2e/: seed_strategy_demo.sql
docker/e2e/config/tables/: alarm_rule.csv  device.csv  ems_config.csv  iec104_mapping.csv  modbus_mapping.csv  site.csv  teleadjust.csv  telecontrol.csv  teleindication.csv  telemetry.csv  topology_binding.csv  topology_link.csv  topology_node.csv
docker/e2e/simulator/: Dockerfile  simulator.py
docs/: admin_portal_guide.md  alarm_rule_config_guide.md  docker_deploy.md  install_runtime_guide.md  modbus_collector_guide.md  strategy_e2e_guide.md  strategy_engine.md  system_capability_roadmap.md
scripts/: build_linux.sh  build_windows.bat  install_linux.sh  install_windows.bat  run_strategy_e2e.py  start_strategy_engine.ps1  start_strategy_engine.sh
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/src/: alarm_main.cpp  collector_main.cpp  history_main.cpp  iec104_collector_main.cpp  main.cpp  rtdb_service_main.cpp  viewer_main.cpp
src/collector/: CMakeLists.txt
src/collector/include/openems/collector/: control_service.h  polling_service.h
src/collector/src/: control_service.cpp  polling_service.cpp
src/common/: CMakeLists.txt
src/common/include/openems/common/: base_interface.h  byte_utils.h  constants.h  crc.h  error_code.h  macros.h  result.h  service_utils.h  string_utils.h  thread_pool.h  thread_safe_queue.h  time_utils.h  types.h
src/common/src/: byte_utils.cpp  crc.cpp  error_code.cpp  service_utils.cpp  string_utils.cpp  thread_pool.cpp  time_utils.cpp
src/config/: CMakeLists.txt
src/config/include/openems/config/: config_loader.h  csv_parser.h  ems_config.h
src/config/src/: config_loader.cpp  csv_parser.cpp
src/core/: CMakeLists.txt
src/core/include/openems/core/: command_handle.h  point_handle.h
src/core/src/: command_handle.cpp  point_handle.cpp
src/devices/: CMakeLists.txt
src/devices/include/openems/devices/: i_protocol.h
src/iec104/: CMakeLists.txt
src/iec104/include/openems/iec104/: iec104_client.h  iec104_config.h
src/iec104/src/: iec104_asdu.cpp  iec104_client.cpp
src/libpq/: CMakeLists.txt
src/libpq/include/openems/libpq/: libpq_api.h
src/libpq/src/: libpq_api.cpp
src/modbus/include/openems/modbus/: modbus_data_parser.h  modbus_tcp_client.h
src/modbus/src/: modbus_data_parser.cpp  modbus_tcp_client.cpp
src/model/: CMakeLists.txt
src/model/include/openems/model/: device.h  iec104_point_mapping.h  modbus_point_mapping.h  point.h  point_value.h  site.h
src/model/src/: device.cpp  iec104_point_mapping.cpp  modbus_point_mapping.cpp  point.cpp  point_value.cpp  site.cpp
src/protocols/: CMakeLists.txt
src/protocols/iec104/include/openems/iec104/: iec104_asdu.h
src/protocols/modbus/: CMakeLists.txt
src/protocols/modbus/include/openems/modbus/: imodbus_client.h  modbus_rtu_client.h  modbus_tcp_client.h  serial_port.h
src/protocols/modbus/src/: modbus_rtu_client.cpp  modbus_tcp_client.cpp  serial_port.cpp
src/rt_data/: CMakeLists.txt
src/rt_data/include/openems/rt_data/: realtime_data_manager.h
src/rt_data/src/: realtime_data_manager.cpp
src/rt_db/: CMakeLists.txt
src/rt_db/include/openems/rt_db/: rt_db.h  rt_db_layout.h
src/rt_db/src/: rt_db.cpp
src/rt_db/tests/: rt_db_table_space_test.cpp
src/services/: CMakeLists.txt
src/services/alarm/: CMakeLists.txt  main.cpp
src/services/history/: CMakeLists.txt  history_writer.cpp  history_writer.h  main.cpp
src/services/iec104_collector/: CMakeLists.txt  main.cpp
src/services/modbus_collector/: CMakeLists.txt  main.cpp
src/services/rtdb_service/: CMakeLists.txt  main.cpp
src/services/strategy_engine/: CMakeLists.txt  main.cpp
src/services/viewer/: CMakeLists.txt
src/strategy/: CMakeLists.txt
src/strategy/include/openems/strategy/: anti_reverse_flow.h  soc_protection.h  strategy_base.h  strategy_types.h
src/strategy/src/: anti_reverse_flow.cpp  soc_protection.cpp  strategy_base.cpp  strategy_types.cpp
src/utils/: CMakeLists.txt
src/utils/include/openems/utils/: logger.h  time_utils.h
src/utils/src/: logger.cpp  time_utils.cpp
src/web/: admin_server.py  alarms_admin.html  audit_admin.html  auth.py  bootstrap_db.py  comm_admin.html  config.html  config_admin.html  config_store.py  dashboard.html  dashboard_admin.html  db.py  history.html  history_admin.html  init_admin_portal_db.ps1  login.html  run_dashboard.py  server.py  shm_reader.py  start_admin_portal_local.ps1  strategy_admin.html  sync_config_to_postgres.py  system_admin.html  topology_admin.html  users_admin.html
src/web/assets/: admin.css  admin.js
src/web/install_scripts/: backfill_history_to_timescale.ps1  backfill_history_to_timescale.py  init_admin_portal_db.ps1  start_admin_portal.ps1  start_alarm.ps1  start_history.ps1  start_iec104_collector.ps1  start_iec104_collector.sh  start_modbus_collector.ps1  start_modbus_collector.sh  start_rtdb_service.ps1  start_rtdb_service.sh  sync_config_to_postgres.ps1  sync_config_to_postgres.sh
src/web/migrations/: 001_init.sql  003_structured_config.sql  004_seed_demo_data.sql  005_history_timescale.sql  006_cleanup_legacy_runtime.sql  007_add_device_serial_columns.sql  008_strategy_tables.sql
tools/iec104_test_server/: README.md  app.py  config.example.json  index.html  requirements.txt  server.py
